--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="images/logo-drk.png" />
-    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Newer Company Inc.</title>
   </head>
   <body>
@@ -15,7 +15,7 @@
           <ul>
             <li><a href="#about">About</a></li>
             <li><a href="#method">Method</a></li>
-            <li><a href="#Clients">Clients</a></li>
+            <li><a href="#clients">Clients</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
